// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ModalPickerSingle ui renderValue should be able to use custom function to render values: Component: ModalPickerSingle => ui => should be able to use custom function to render values 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <ModalPickerOpener
    label="Select your best friend"
    onClear={[Function]}
    openModal={[Function]}
    renderValue={[Function]}
    value={
      Object {
        "active": true,
        "email": "admin@42.nl",
        "firstName": "Addie",
        "id": 42,
        "lastName": "Admin",
        "roles": Array [
          "ADMIN",
        ],
      }
    }
  />
  Some error
  <ModalPicker
    canSearch={true}
    canSearchSync={true}
    closeModal={[Function]}
    isOpen={false}
    loading={false}
    modalSaved={[Function]}
    page={
      Object {
        "content": Array [
          Object {
            "active": true,
            "email": "admin@42.nl",
            "firstName": "Addie",
            "id": 42,
            "lastName": "Admin",
            "roles": Array [
              "ADMIN",
            ],
          },
          Object {
            "active": false,
            "email": "coordinator@42.nl",
            "firstName": "Cordelia",
            "id": 777,
            "lastName": "Coordinator",
            "roles": Array [
              "ADMIN",
              "USER",
            ],
          },
          Object {
            "active": false,
            "email": "user@42.nl",
            "firstName": "Ulysses",
            "id": 1337,
            "lastName": "User",
            "roles": Array [
              "USER",
            ],
          },
        ],
        "first": true,
        "last": true,
        "number": 1,
        "numberOfElements": 3,
        "size": 3,
        "totalElements": 3,
        "totalPages": 1,
      }
    }
    pageChanged={[Function]}
    placeholder="Select your best friend"
    query=""
    queryChanged={[Function]}
    userHasSearched={false}
  >
    <FormGroup
      check={true}
      key="42"
      tag="div"
    >
      <Label
        check={true}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Input
          checked={false}
          disabled={false}
          onChange={[Function]}
          type="radio"
        />
        admin@42.nl
      </Label>
    </FormGroup>
    <FormGroup
      check={true}
      key="777"
      tag="div"
    >
      <Label
        check={true}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Input
          checked={false}
          disabled={false}
          onChange={[Function]}
          type="radio"
        />
        coordinator@42.nl
      </Label>
    </FormGroup>
    <FormGroup
      check={true}
      key="1337"
      tag="div"
    >
      <Label
        check={true}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Input
          checked={false}
          disabled={false}
          onChange={[Function]}
          type="radio"
        />
        user@42.nl
      </Label>
    </FormGroup>
  </ModalPicker>
</FormGroup>
`;

exports[`Component: ModalPickerSingle ui renderValue should use the default ModalPickerValueTruncator to render values: Component: ModalPickerSingle => ui => should use the default ModalPickerValueTruncator to render values 1`] = `
<ModalPickerValueTruncator
  labelForOption={[Function]}
  value={
    Object {
      "active": true,
      "email": "admin@42.nl",
      "firstName": "Addie",
      "id": 42,
      "lastName": "Admin",
      "roles": Array [
        "ADMIN",
      ],
    }
  }
/>
`;

exports[`Component: ModalPickerSingle ui should render button left: Component: ModalPickerSingle => ui => should render button left 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <ModalPickerOpener
    alignButton="left"
    label="Select your best friend"
    onClear={[Function]}
    openModal={[Function]}
    renderValue={[Function]}
    value={
      Object {
        "active": true,
        "email": "admin@42.nl",
        "firstName": "Addie",
        "id": 42,
        "lastName": "Admin",
        "roles": Array [
          "ADMIN",
        ],
      }
    }
  />
  Some error
  <ModalPicker
    canSearch={true}
    canSearchSync={true}
    closeModal={[Function]}
    isOpen={false}
    loading={false}
    modalSaved={[Function]}
    page={
      Object {
        "content": Array [
          Object {
            "active": true,
            "email": "admin@42.nl",
            "firstName": "Addie",
            "id": 42,
            "lastName": "Admin",
            "roles": Array [
              "ADMIN",
            ],
          },
          Object {
            "active": false,
            "email": "coordinator@42.nl",
            "firstName": "Cordelia",
            "id": 777,
            "lastName": "Coordinator",
            "roles": Array [
              "ADMIN",
              "USER",
            ],
          },
          Object {
            "active": false,
            "email": "user@42.nl",
            "firstName": "Ulysses",
            "id": 1337,
            "lastName": "User",
            "roles": Array [
              "USER",
            ],
          },
        ],
        "first": true,
        "last": true,
        "number": 1,
        "numberOfElements": 3,
        "size": 3,
        "totalElements": 3,
        "totalPages": 1,
      }
    }
    pageChanged={[Function]}
    placeholder="Select your best friend"
    query=""
    queryChanged={[Function]}
    userHasSearched={false}
  >
    <FormGroup
      check={true}
      key="42"
      tag="div"
    >
      <Label
        check={true}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Input
          checked={false}
          disabled={false}
          onChange={[Function]}
          type="radio"
        />
        admin@42.nl
      </Label>
    </FormGroup>
    <FormGroup
      check={true}
      key="777"
      tag="div"
    >
      <Label
        check={true}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Input
          checked={false}
          disabled={false}
          onChange={[Function]}
          type="radio"
        />
        coordinator@42.nl
      </Label>
    </FormGroup>
    <FormGroup
      check={true}
      key="1337"
      tag="div"
    >
      <Label
        check={true}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Input
          checked={false}
          disabled={false}
          onChange={[Function]}
          type="radio"
        />
        user@42.nl
      </Label>
    </FormGroup>
  </ModalPicker>
</FormGroup>
`;

exports[`Component: ModalPickerSingle ui should render button right with value: Component: ModalPickerSingle => ui => should render button right with value 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <ModalPickerOpener
    alignButton="right"
    label="Select your best friend"
    onClear={[Function]}
    openModal={[Function]}
    renderValue={[Function]}
    value={
      Object {
        "active": true,
        "email": "admin@42.nl",
        "firstName": "Addie",
        "id": 42,
        "lastName": "Admin",
        "roles": Array [
          "ADMIN",
        ],
      }
    }
  />
  Some error
  <ModalPicker
    canSearch={true}
    canSearchSync={true}
    closeModal={[Function]}
    isOpen={false}
    loading={false}
    modalSaved={[Function]}
    page={
      Object {
        "content": Array [
          Object {
            "active": true,
            "email": "admin@42.nl",
            "firstName": "Addie",
            "id": 42,
            "lastName": "Admin",
            "roles": Array [
              "ADMIN",
            ],
          },
          Object {
            "active": false,
            "email": "coordinator@42.nl",
            "firstName": "Cordelia",
            "id": 777,
            "lastName": "Coordinator",
            "roles": Array [
              "ADMIN",
              "USER",
            ],
          },
          Object {
            "active": false,
            "email": "user@42.nl",
            "firstName": "Ulysses",
            "id": 1337,
            "lastName": "User",
            "roles": Array [
              "USER",
            ],
          },
        ],
        "first": true,
        "last": true,
        "number": 1,
        "numberOfElements": 3,
        "size": 3,
        "totalElements": 3,
        "totalPages": 1,
      }
    }
    pageChanged={[Function]}
    placeholder="Select your best friend"
    query=""
    queryChanged={[Function]}
    userHasSearched={false}
  >
    <FormGroup
      check={true}
      key="42"
      tag="div"
    >
      <Label
        check={true}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Input
          checked={false}
          disabled={false}
          onChange={[Function]}
          type="radio"
        />
        admin@42.nl
      </Label>
    </FormGroup>
    <FormGroup
      check={true}
      key="777"
      tag="div"
    >
      <Label
        check={true}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Input
          checked={false}
          disabled={false}
          onChange={[Function]}
          type="radio"
        />
        coordinator@42.nl
      </Label>
    </FormGroup>
    <FormGroup
      check={true}
      key="1337"
      tag="div"
    >
      <Label
        check={true}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Input
          checked={false}
          disabled={false}
          onChange={[Function]}
          type="radio"
        />
        user@42.nl
      </Label>
    </FormGroup>
  </ModalPicker>
</FormGroup>
`;

exports[`Component: ModalPickerSingle ui should render button right without value: Component: ModalPickerSingle => ui => should render button right without value 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <ModalPickerOpener
    alignButton="right"
    label="Select your best friend"
    onClear={[Function]}
    openModal={[Function]}
    renderValue={[Function]}
  />
  Some error
  <ModalPicker
    canSearch={true}
    canSearchSync={true}
    closeModal={[Function]}
    isOpen={false}
    loading={false}
    modalSaved={[Function]}
    page={
      Object {
        "content": Array [
          Object {
            "active": true,
            "email": "admin@42.nl",
            "firstName": "Addie",
            "id": 42,
            "lastName": "Admin",
            "roles": Array [
              "ADMIN",
            ],
          },
          Object {
            "active": false,
            "email": "coordinator@42.nl",
            "firstName": "Cordelia",
            "id": 777,
            "lastName": "Coordinator",
            "roles": Array [
              "ADMIN",
              "USER",
            ],
          },
          Object {
            "active": false,
            "email": "user@42.nl",
            "firstName": "Ulysses",
            "id": 1337,
            "lastName": "User",
            "roles": Array [
              "USER",
            ],
          },
        ],
        "first": true,
        "last": true,
        "number": 1,
        "numberOfElements": 3,
        "size": 3,
        "totalElements": 3,
        "totalPages": 1,
      }
    }
    pageChanged={[Function]}
    placeholder="Select your best friend"
    query=""
    queryChanged={[Function]}
    userHasSearched={false}
  >
    <FormGroup
      check={true}
      key="42"
      tag="div"
    >
      <Label
        check={true}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Input
          checked={false}
          disabled={false}
          onChange={[Function]}
          type="radio"
        />
        admin@42.nl
      </Label>
    </FormGroup>
    <FormGroup
      check={true}
      key="777"
      tag="div"
    >
      <Label
        check={true}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Input
          checked={false}
          disabled={false}
          onChange={[Function]}
          type="radio"
        />
        coordinator@42.nl
      </Label>
    </FormGroup>
    <FormGroup
      check={true}
      key="1337"
      tag="div"
    >
      <Label
        check={true}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Input
          checked={false}
          disabled={false}
          onChange={[Function]}
          type="radio"
        />
        user@42.nl
      </Label>
    </FormGroup>
  </ModalPicker>
</FormGroup>
`;

exports[`Component: ModalPickerSingle ui should render without label: Component: ModalPickerSingle => ui => should render without label 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <ModalPickerOpener
    label="Select your best friend"
    onClear={[Function]}
    openModal={[Function]}
    renderValue={[Function]}
    value={
      Object {
        "active": true,
        "email": "admin@42.nl",
        "firstName": "Addie",
        "id": 42,
        "lastName": "Admin",
        "roles": Array [
          "ADMIN",
        ],
      }
    }
  />
  Some error
  <ModalPicker
    canSearch={true}
    canSearchSync={true}
    closeModal={[Function]}
    isOpen={false}
    loading={false}
    modalSaved={[Function]}
    page={
      Object {
        "content": Array [
          Object {
            "active": true,
            "email": "admin@42.nl",
            "firstName": "Addie",
            "id": 42,
            "lastName": "Admin",
            "roles": Array [
              "ADMIN",
            ],
          },
          Object {
            "active": false,
            "email": "coordinator@42.nl",
            "firstName": "Cordelia",
            "id": 777,
            "lastName": "Coordinator",
            "roles": Array [
              "ADMIN",
              "USER",
            ],
          },
          Object {
            "active": false,
            "email": "user@42.nl",
            "firstName": "Ulysses",
            "id": 1337,
            "lastName": "User",
            "roles": Array [
              "USER",
            ],
          },
        ],
        "first": true,
        "last": true,
        "number": 1,
        "numberOfElements": 3,
        "size": 3,
        "totalElements": 3,
        "totalPages": 1,
      }
    }
    pageChanged={[Function]}
    placeholder="Select your best friend"
    query=""
    queryChanged={[Function]}
    userHasSearched={false}
  >
    <FormGroup
      check={true}
      key="42"
      tag="div"
    >
      <Label
        check={true}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Input
          checked={false}
          disabled={false}
          onChange={[Function]}
          type="radio"
        />
        admin@42.nl
      </Label>
    </FormGroup>
    <FormGroup
      check={true}
      key="777"
      tag="div"
    >
      <Label
        check={true}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Input
          checked={false}
          disabled={false}
          onChange={[Function]}
          type="radio"
        />
        coordinator@42.nl
      </Label>
    </FormGroup>
    <FormGroup
      check={true}
      key="1337"
      tag="div"
    >
      <Label
        check={true}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Input
          checked={false}
          disabled={false}
          onChange={[Function]}
          type="radio"
        />
        user@42.nl
      </Label>
    </FormGroup>
  </ModalPicker>
</FormGroup>
`;

exports[`Component: ModalPickerSingle ui should render: Component: ModalPickerSingle => ui => should render 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <ModalPickerOpener
    label="Select your best friend"
    onClear={[Function]}
    openModal={[Function]}
    renderValue={[Function]}
    value={
      Object {
        "active": true,
        "email": "admin@42.nl",
        "firstName": "Addie",
        "id": 42,
        "lastName": "Admin",
        "roles": Array [
          "ADMIN",
        ],
      }
    }
  />
  Some error
  <ModalPicker
    canSearch={true}
    canSearchSync={true}
    closeModal={[Function]}
    isOpen={false}
    loading={false}
    modalSaved={[Function]}
    page={
      Object {
        "content": Array [
          Object {
            "active": true,
            "email": "admin@42.nl",
            "firstName": "Addie",
            "id": 42,
            "lastName": "Admin",
            "roles": Array [
              "ADMIN",
            ],
          },
          Object {
            "active": false,
            "email": "coordinator@42.nl",
            "firstName": "Cordelia",
            "id": 777,
            "lastName": "Coordinator",
            "roles": Array [
              "ADMIN",
              "USER",
            ],
          },
          Object {
            "active": false,
            "email": "user@42.nl",
            "firstName": "Ulysses",
            "id": 1337,
            "lastName": "User",
            "roles": Array [
              "USER",
            ],
          },
        ],
        "first": true,
        "last": true,
        "number": 1,
        "numberOfElements": 3,
        "size": 3,
        "totalElements": 3,
        "totalPages": 1,
      }
    }
    pageChanged={[Function]}
    placeholder="Select your best friend"
    query=""
    queryChanged={[Function]}
    userHasSearched={false}
  >
    <FormGroup
      check={true}
      key="42"
      tag="div"
    >
      <Label
        check={true}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Input
          checked={false}
          disabled={false}
          onChange={[Function]}
          type="radio"
        />
        admin@42.nl
      </Label>
    </FormGroup>
    <FormGroup
      check={true}
      key="777"
      tag="div"
    >
      <Label
        check={true}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Input
          checked={false}
          disabled={false}
          onChange={[Function]}
          type="radio"
        />
        coordinator@42.nl
      </Label>
    </FormGroup>
    <FormGroup
      check={true}
      key="1337"
      tag="div"
    >
      <Label
        check={true}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Input
          checked={false}
          disabled={false}
          onChange={[Function]}
          type="radio"
        />
        user@42.nl
      </Label>
    </FormGroup>
  </ModalPicker>
</FormGroup>
`;
